--- a/src/app/module/product/authentication/secured/secured.component.html
+++ b/src/app/module/product/authentication/secured/secured.component.html
@@ -1,3 +1,3 @@
-<p>secured works!</p>
+<p>Te logeaste correctamente</p>
 
 <button class="btn btn-primary" (click)="logout()">Cerrar Sesión</button>
