--- a/src/app/module/product/component/product-detail/product-detail.component.html
+++ b/src/app/module/product/component/product-detail/product-detail.component.html
@@ -38,25 +38,25 @@
             <div class="card">
                 <div class="card-body-product">
 
-                    <!-- name  -->
+                    <!-- product  -->
 
                     <div class="product-title">
-                        {{ product.name + " " + product.surname }}
+                        {{ product.product+ " " + product.product }}
                     </div>
 
                     <table class="table">
                         <tbody>
                             
-                            <!-- rfc  -->
+                            <!-- gtin  -->
                             <tr>
-                                <th class="col-md-4">RFC</th>
-                                <td>{{ product.rfc }}</td>
+                                <th class="col-md-4">gtin</th>
+                                <td>{{ product.gtin }}</td>
                             </tr>
                                 
-                            <!-- mail  -->
+                            <!-- price  -->
                             <tr>
                                 <th class="col-md-4">Correo electrónico</th>
-                                <td>{{ product.mail }}</td>
+                                <td>{{ product.price }}</td>
                             </tr>
                                 
                             <!-- category  -->
@@ -65,10 +65,10 @@
                                 <td>{{ category.category }}</td>
                             </tr>
                             
-                            <!-- rfc  -->
+                            <!-- gtin  -->
                             <tr>
                                 <th class="col-md-4">Dirección</th>
-                                <td>{{ product.address }}</td>
+                                <td>{{ product.stock }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -103,60 +103,60 @@
         </div>
         <div class="modal-body">
   
-            <!-- Customer form  -->
+            <!-- Product form  -->
             
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
   
             
                 <div class="row">
   
-                    <!-- name  -->
+                    <!-- product  -->
     
                     <div class="col-md-6">
                         <div class="mb-3">
-                          <label for="name">Nombre <span class="color-red">*</span> </label>
-                          <input type="text" class="form-control" formControlName="name" id="name" placeholder="Nombre del cliente..." 
-                              [ngClass]="{'is-invalid': form.controls['name'].errors && submitted}" >
-                          @if (form.controls['name'].errors && submitted) {
+                          <label for="product">Nombre <span class="color-red">*</span> </label>
+                          <input type="text" class="form-control" formControlName="product" id="product" placeholder="Nombre del cliente..." 
+                              [ngClass]="{'is-invalid': form.controls['product'].errors && submitted}" >
+                          @if (form.controls['product'].errors && submitted) {
                             <small class="input-error-message">Favor de ingresar un nombre válido</small>
                           }
                         </div>
                     </div>
           
-                    <!-- surname  -->
+                    <!-- description  -->
           
                     <div class="col-md-6"> 
                         <div class="mb-3">
-                          <label for="surname">Apellidos <span class="color-red">*</span> </label>
-                          <input type="text" class="form-control" formControlName="surname" id="surname" placeholder="Apellidos del cliente..." 
-                              [ngClass]="{'is-invalid': form.controls['surname'].errors && submitted}" >
-                          @if (form.controls['surname'].errors && submitted) {
+                          <label for="description">Apellidos <span class="color-red">*</span> </label>
+                          <input type="text" class="form-control" formControlName="description" id="description" placeholder="Apellidos del cliente..." 
+                              [ngClass]="{'is-invalid': form.controls['description'].errors && submitted}" >
+                          @if (form.controls['description'].errors && submitted) {
                             <small class="input-error-message">Favor de ingresar apellidos válidos</small>
                           }
                         </div>
                     </div>
           
-                    <!-- rfc  -->
+                    <!-- gtin  -->
           
                     <div class="col-md-6"> 
                         <div class="mb-3">
-                          <label for="rfc">RFC <span class="color-red">*</span> </label>
-                          <input type="text" class="form-control" formControlName="rfc" id="rfc" placeholder="RFC del cliente..." 
-                              [ngClass]="{'is-invalid': form.controls['rfc'].errors && submitted}" >
-                          @if (form.controls['rfc'].errors && submitted) {
-                            <small class="input-error-message">Favor de ingresar un rfc válido</small>
+                          <label for="gtin">gtin <span class="color-red">*</span> </label>
+                          <input type="text" class="form-control" formControlName="gtin" id="gtin" placeholder="gtin del cliente..." 
+                              [ngClass]="{'is-invalid': form.controls['gtin'].errors && submitted}" >
+                          @if (form.controls['gtin'].errors && submitted) {
+                            <small class="input-error-message">Favor de ingresar un gtin válido</small>
                           }
                         </div>
                     </div>
           
-                    <!-- mail  -->
+                    <!-- price  -->
           
                     <div class="col-md-6"> 
                         <div class="mb-3">
-                          <label for="mail">Correo electrónico <span class="color-red">*</span> </label>
-                          <input type="text" class="form-control" formControlName="mail" id="mail" placeholder="Correo electrónico del cliente..." 
-                              [ngClass]="{'is-invalid': form.controls['mail'].errors && submitted}" >
-                          @if (form.controls['mail'].errors && submitted) {
+                          <label for="price">Correo electrónico <span class="color-red">*</span> </label>
+                          <input type="text" class="form-control" formControlName="price" id="price" placeholder="Correo electrónico del cliente..." 
+                              [ngClass]="{'is-invalid': form.controls['price'].errors && submitted}" >
+                          @if (form.controls['price'].errors && submitted) {
                             <small class="input-error-message">Favor de ingresar un correo electrónico válido</small>
                           }
                         </div>
@@ -180,14 +180,14 @@
                         </div>
                     </div>
           
-                    <!-- address  -->
+                    <!-- stock  -->
           
                     <div class="mb-3">
-                      <label for="address">Dirección <span class="color-red">*</span> </label>
-                      <textarea rows="2" class="form-control" formControlName="address" id="address" placeholder="Dirección del cliente..." 
-                        [ngClass]="{'is-invalid': form.controls['address'].errors && submitted}" >
+                      <label for="stock">Dirección <span class="color-red">*</span> </label>
+                      <textarea rows="2" class="form-control" formControlName="stock" id="stock" placeholder="Dirección del cliente..." 
+                        [ngClass]="{'is-invalid': form.controls['stock'].errors && submitted}" >
                       </textarea>
-                      @if (form.controls['address'].errors && submitted) {
+                      @if (form.controls['stock'].errors && submitted) {
                         <small class="input-error-message">Favor de ingresar una dirección válida</small>
                       }
                     </div>
