--- a/src/app/module/product/component/product/product.component.html
+++ b/src/app/module/product/component/product/product.component.html
@@ -5,12 +5,12 @@
   <div class="card-header">
     <div class="row">
         <div class="col">
-          <h4>Listado de clientes</h4>
+          <h4>Listado de productos</h4>
         </div>
         <div class="col">
           <button type="button" class="btn btn-primary" style="float: right;" (click)="showModalForm()">
             <i class="ph ph-plus-circle"></i>
-            Agregar cliente
+            Agregar producto
           </button>
         </div>
     </div>
@@ -20,14 +20,15 @@
 
   <div class="card-body">
 
-      <!-- Product table  -->
+      <!-- Category table  -->
 
       <table class="table">
           <thead class="thead-dark">
             <tr class="table-primary">
-                <th>No.</th>
-                <th>RFC</th>
-                <th>Nombre</th>
+                <th>Id</th>
+                <th>Gtin</th>
+                <th>Producto</th>
+                <th>Precio</th>
                 <th>Estatus</th>
                 <th>Más</th>
             </tr>
@@ -36,8 +37,9 @@
               @for(product of products; track product; let i = $index ) {
                   <tr>
                       <td>{{ i + 1 }}</td>
-                      <td>{{ product.rfc }}</td>
-                      <td>{{ product.name + " " + product.surname }}</td>
+                      <td>{{ product.gtin }}</td>
+                      <td>{{ product.product }}</td>
+                      <td>{{ product.price | currency: 'USD'}}</td>
                       <td>
                         <div class="td-status" [ngClass]="{'td-status-enable': product.status == 1, 'td-status-disable': product.status == 0}" >
                           {{ product.status == 0 ? "Inactivo" : "Activo" }}
@@ -54,7 +56,7 @@
       
                           <!-- menu options -->
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" (click)="showProduct(product.rfc)">
+                            <a class="dropdown-item" (click)="showProduct(product.gtin)">
                               <i class="ph ph-eye icon-text-ul"></i>Ver detalles
                             </a>
                             <a *ngIf="product.status == 0" class="dropdown-item enable-item" (click)="enableProduct(product.product_id)">
@@ -63,6 +65,7 @@
                             <a *ngIf="product.status == 1" class="dropdown-item disable-item" (click)="disableProduct(product.product_id)">
                               <i class="ph ph-x-circle icon-text-ul"></i>Desactivar
                             </a>
+                  
                           </div>
                         </div>
                       </td>
@@ -76,113 +79,113 @@
 <!-- Modal form  -->
 
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="modalForm">
-<div class="modal-dialog modal-dialog-centered modal-lg">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">Cliente</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Producto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
 
-        <!-- Product form  -->
-        
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <!-- Product form  -->
+          
+          <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-        
-            <div class="row">
+          
+              <div class="row">
 
-                <!-- name  -->
-
-                <div class="col-md-6">
-                    <div class="mb-3">
-                      <label for="name">Nombre <span class="color-red">*</span> </label>
-                      <input type="text" class="form-control" formControlName="name" id="name" placeholder="Nombre del cliente..." 
-                          [ngClass]="{'is-invalid': form.controls['name'].errors && submitted}" >
-                      @if (form.controls['name'].errors && submitted) {
-                        <small class="input-error-message">Favor de ingresar un nombre válido</small>
-                      }
-                    </div>
-                </div>
-      
-                <!-- surname  -->
-      
-                <div class="col-md-6"> 
-                    <div class="mb-3">
-                      <label for="surname">Apellidos <span class="color-red">*</span> </label>
-                      <input type="text" class="form-control" formControlName="surname" id="surname" placeholder="Apellidos del cliente..." 
-                          [ngClass]="{'is-invalid': form.controls['surname'].errors && submitted}" >
-                      @if (form.controls['surname'].errors && submitted) {
-                        <small class="input-error-message">Favor de ingresar apellidos válidos</small>
-                      }
-                    </div>
-                </div>
-      
-                <!-- rfc  -->
-      
-                <div class="col-md-6"> 
-                    <div class="mb-3">
-                      <label for="rfc">RFC <span class="color-red">*</span> </label>
-                      <input type="text" class="form-control" formControlName="rfc" id="rfc" placeholder="RFC del cliente..." 
-                          [ngClass]="{'is-invalid': form.controls['rfc'].errors && submitted}" >
-                      @if (form.controls['rfc'].errors && submitted) {
-                        <small class="input-error-message">Favor de ingresar un rfc válido</small>
-                      }
-                    </div>
-                </div>
-      
-                <!-- mail  -->
-      
-                <div class="col-md-6"> 
-                    <div class="mb-3">
-                      <label for="mail">Correo electrónico <span class="color-red">*</span> </label>
-                      <input type="text" class="form-control" formControlName="mail" id="mail" placeholder="Correo electrónico del cliente..." 
-                          [ngClass]="{'is-invalid': form.controls['mail'].errors && submitted}" >
-                      @if (form.controls['mail'].errors && submitted) {
-                        <small class="input-error-message">Favor de ingresar un correo electrónico válido</small>
-                      }
-                    </div>
-                </div>  
-      
-                <!-- category_id  -->
-      
-                <div class="col-md-6"> 
-                    <div class="mb-3">
-                      <label for="category_id">Región <span class="color-red">*</span> </label>
-                      <select class="form-select" formControlName="category_id" id="category_id"
-                          [ngClass]="{'is-invalid': form.controls['category_id'].errors && submitted}">
-                        <option [ngValue]=null hidden>Selecciona una región...</option>
-                        @for(category of categories; track category) {
-                          <option [ngValue]="category.category_id">{{ category.category }}</option>
+                  <!-- gtin  -->
+  
+                  <div class="col-md-6">
+                      <div class="mb-3">
+                        <label for="gtin">GTIN <span class="color-red">*</span> </label>
+                        <input type="text" class="form-control" formControlName="gtin" id="gtin" placeholder="Código GTIN del producto..." 
+                            [ngClass]="{'is-invalid': form.controls['gtin'].errors && submitted}" >
+                        @if (form.controls['gtin'].errors && submitted) {
+                          <small class="input-error-message">Favor de ingresar un código gtin válido</small>
                         }
-                      </select>
-                      @if (form.controls['category_id'].errors && submitted) {
-                        <small class="input-error-message">Favor de seleccionar una región válida</small>
-                      }
-                    </div>
-                </div>
-      
-                <!-- address  -->
-      
-                <div class="mb-3">
-                  <label for="address">Dirección <span class="color-red">*</span> </label>
-                  <textarea rows="2" class="form-control" formControlName="address" id="address" placeholder="Dirección del cliente..." 
-                    [ngClass]="{'is-invalid': form.controls['address'].errors && submitted}" >
-                  </textarea>
-                  @if (form.controls['address'].errors && submitted) {
-                    <small class="input-error-message">Favor de ingresar una dirección válida</small>
-                  }
-                </div>
-            </div>
-  
-            <!-- button  -->
-            
-            <div class="form-button">
-              <button type="submit" class="btn btn-primary btn-new">Guardar</button>
-            </div>
-  
-          </form>
+                      </div>
+                  </div>
+        
+                  <!-- product  -->
+        
+                  <div class="col-md-6"> 
+                      <div class="mb-3">
+                        <label for="product">Producto <span class="color-red">*</span> </label>
+                        <input type="text" class="form-control" formControlName="product" id="product" placeholder="Nombre del producto..." 
+                            [ngClass]="{'is-invalid': form.controls['product'].errors && submitted}" >
+                        @if (form.controls['product'].errors && submitted) {
+                          <small class="input-error-message">Favor de ingresar un nombre de producto válido</small>
+                        }
+                      </div>
+                  </div>
+        
+                  <!-- price  -->
+        
+                  <div class="col-md-6"> 
+                      <div class="mb-3">
+                        <label for="price">Precio <span class="color-red">*</span> </label>
+                        <input type="text" class="form-control" formControlName="price" id="price" placeholder="Precio del producto..." 
+                            [ngClass]="{'is-invalid': form.controls['price'].errors && submitted}" >
+                        @if (form.controls['price'].errors && submitted) {
+                          <small class="input-error-message">Favor de ingresar un precio válido</small>
+                        }
+                      </div>
+                  </div>
+        
+                  <!-- stock  -->
+        
+                  <div class="col-md-6"> 
+                      <div class="mb-3">
+                        <label for="stock">Cantidad de productos <span class="color-red">*</span> </label>
+                        <input type="text" class="form-control" formControlName="stock" id="stock" placeholder="Número de stock del producto..." 
+                            [ngClass]="{'is-invalid': form.controls['stock'].errors && submitted}" >
+                        @if (form.controls['stock'].errors && submitted) {
+                          <small class="input-error-message">Favor de ingresar un número de stock válido</small>
+                        }
+                      </div>
+                  </div>  
+        
+                  <!-- category_id  -->
+        
+                  <div class="col-md-6"> 
+                      <div class="mb-3">
+                        <label for="category_id">Categoría <span class="color-red">*</span> </label>
+                        <select class="form-select" formControlName="category_id" id="category_id"
+                            [ngClass]="{'is-invalid': form.controls['category_id'].errors && submitted}">
+                          <option [ngValue]=null hidden>Selecciona una categoría...</option>
+                          @for(category of categories; track category) {
+                            <option [ngValue]="category.category_id">{{ category.category }}</option>
+                          }
+                        </select>
+                        @if (form.controls['category_id'].errors && submitted) {
+                          <small class="input-error-message">Favor de seleccionar válida</small>
+                        }
+                      </div>
+                  </div>
+        
+                  <!-- description  -->
+        
+                  <div class="mb-3">
+                    <label for="description">Descripción <span class="color-red">*</span> </label>
+                    <textarea rows="2" class="form-control" formControlName="description" id="description" placeholder="Descripción del producto..." 
+                      [ngClass]="{'is-invalid': form.controls['description'].errors && submitted}" >
+                    </textarea>
+                    @if (form.controls['description'].errors && submitted) {
+                      <small class="input-error-message">Favor de ingresar una descripción válida</small>
+                    }
+                  </div>
+              </div>
+    
+              <!-- button  -->
+              
+              <div class="form-button">
+                <button type="submit" class="btn btn-primary btn-new">Guardar</button>
+              </div>
+    
+            </form>
 
+      </div>
     </div>
   </div>
-</div>
 </div>
