--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.css
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.css
@@ -16,7 +16,7 @@
 }
 
 .nav-dropdown-menu{
-    background-color: #2c3e50;
+    background-color: #5c5c5c;
     border-radius: 0px;
     margin-top: 13px;
     border: none;
