--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -3,9 +3,9 @@
 
     <!-- logo  -->
 
-      <a class="navbar-brand" href="/">
+      <!-- <a class="navbar-brand" href="/">
         <img src="assets/images/Ray-Ban_blue.png" alt="..." class="nav-logo">
-      </a>
+      </a> -->
 
     <!-- responsive button  -->
       
