--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -1,11 +1,9 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid navbar-content">
-
-    <!-- logo  -->
-
-      <!-- <a class="navbar-brand" href="/">
-        <img src="assets/images/Ray-Ban_blue.png" alt="..." class="nav-logo">
-      </a> -->
+<nav class="navbar navbar-expand-lg navbar-custom" data-bs-theme="dark">
+  <div class="container-fluid navbar-content">
+      <!-- logo -->
+      <a class="navbar-brand" href="/">
+          <p>MAD</p>
+      </a>
 
     <!-- responsive button  -->
       
@@ -20,15 +18,24 @@
           
         <!-- categories -->
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categorías</a>
-            <div class="dropdown-menu nav-dropdown-menu">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Maquillaje</a>
+          <div class="dropdown-menu nav-dropdown-menu">
               @for(category of categories; track category) {
-                <a class="dropdown-item nav-dropdown-item" routerLink="#">{{ category.category }}</a>
+                  <a class="dropdown-item nav-dropdown-item" routerLink="#">{{ category.category }}</a>
               }
-            </div>
-          </li>
+          </div>
+      </li>
 
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cuidado de la piel</a>
+        <div class="dropdown-menu nav-dropdown-menu">
+            @for(category of categories; track category) {
+                <a class="dropdown-item nav-dropdown-item" routerLink="#">{{ category.category }}</a>
+            }
+        </div>
+    </li>
+      
         <!-- admin -->
 
           @if (isAdmin) {
@@ -46,11 +53,13 @@
 
         <!-- search bar  -->
 
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="search" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-
+        <form class="d-flex search-form">
+          <input class="form-control me-sm-2 search-input" type="search" placeholder="Buscar">
+          <button class="btn search-button" type="submit">
+              <i class="bi bi-search"></i>
+          </button>
+      </form>
+      
         <!-- shopping cart  -->
 
         @if (loggedIn) {
