Vista detalle producto

--- a/src/app/module/product/component/product/product.component.html
+++ b/src/app/module/product/component/product/product.component.html
@@ -176,7 +176,7 @@
           </div>
           <div class="col-md-4">
             <label class="form-label"><strong>Cantidad en Stock:</strong></label>
-            <p>{{ product.stock }}</p>
+            <p>{{ product.gtin }}</p>
           </div>
           <div class="col-md-4">
             <label class="form-label"><strong>Categoría:</strong></label>
