--- a/src/app/module/home/home.component.html
+++ b/src/app/module/home/home.component.html
@@ -72,12 +72,14 @@
                           <h5 class="fw-bolder">{{product.product}}</h5>
                           <!-- Product price-->
                           ${{product.price}}
+                          <p>Stock: {{ product.stock }}</p>
+                          
                         </div>
                       </div>
                       @if(product.stock > 0){
                           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                               <div class="add-cart-container"><a class="btn btn-cart" (click)="addToCart(product.gtin)"><i
-                                          class="ph ph-shopping-bag"></i> <span>Añadir</span></a></div>
+                                          class="button"></i> <span>Añadir</span></a></div>
                           </div>
                           }@else{
                           <div class="card-footer p-3 pt-0 border-top-0 bg-transparent">
@@ -131,13 +133,6 @@
 
 
 </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        
     </body>
 </html>
