--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.css
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.css
@@ -15,6 +15,7 @@
     text-align: center;
     margin-top: 10px;
     font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
 }
 
 .navbar-content{
