--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categorias</a>
           <div class="dropdown-menu nav-dropdown-menu">
               @for(category of categories; track category) {
-                  <a class="dropdown-item nav-dropdown-item" routerLink="#">{{ category.category }}</a>
+                  <a class="dropdown-item nav-dropdown-item" [routerLink]="['/producto/categoria', category.category_id]">{{ category.category }}</a>
               }
           </div>
       </li>
