--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -55,7 +55,7 @@
         <!-- shopping cart  -->
 
         @if (loggedIn) {
-          <a class="nav-link" routerLink="#" role="button">
+          <a class="nav-link" routerLink="carrito" role="button">
             <i class="ph ph-shopping-cart i-cart"></i>
           </a>
         }@else {
