--- a/src/app/module/home/home.component.css
+++ b/src/app/module/home/home.component.css
@@ -137,14 +137,16 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: x-large;  
+  font-size: 10px;  
   display: flex;
   justify-content: center;
 }
 @media (min-width: 1200px) {
   h2, .h2 {
     justify-content: center;
-    font-size: 100px;
+    font-size: 40px;  
+
+    font-weight: lighter;
   }
 }
 
@@ -272,7 +274,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: var(--bs-font-monospace);
+
   font-size: 1em;
 }
 
@@ -365,7 +367,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+
   font-size: inherit;
   line-height: inherit;
 }
@@ -2779,7 +2781,7 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
+
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
@@ -2794,7 +2796,7 @@ textarea.form-control-lg {
   --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
   display: inline-block;
   padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-  font-family: var(--bs-btn-font-family);
+
   font-size: var(--bs-btn-font-size);
   font-weight: var(--bs-btn-font-weight);
   line-height: var(--bs-btn-line-height);
@@ -4163,11 +4165,11 @@ textarea.form-control-lg {
   --bs-card-spacer-y: 1rem;
   --bs-card-spacer-x: 1rem;
   --bs-card-title-spacer-y: 0.5rem;
-  --bs-card-border-width: 1px;
+  --bs-card-border-width: 0;
   --bs-card-border-color: var(--bs-border-color-translucent);
-  --bs-card-border-radius: 0.375rem;
+  --bs-card-border-radius: 0;
   --bs-card-box-shadow: ;
-  --bs-card-inner-border-radius: calc(0.375rem - 1px);
+  --bs-card-inner-border-radius: 0;
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
   --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
@@ -4187,10 +4189,15 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
+  transition: transform 0.2s;
+}
+.card:hover {
+  transform: scale(1.05);
 }
 .card > hr {
   margin-right: 0;
   margin-left: 0;
+  transition: transform 0.2s;
 }
 .card > .list-group {
   border-top: inherit;
@@ -5554,7 +5561,7 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-tooltip-arrow-height);
   margin: var(--bs-tooltip-margin);
-  font-family: var(--bs-font-sans-serif);
+
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5664,7 +5671,7 @@ textarea.form-control-lg {
   z-index: var(--bs-popover-zindex);
   display: block;
   max-width: var(--bs-popover-max-width);
-  font-family: var(--bs-font-sans-serif);
+
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -7677,14 +7684,14 @@ textarea.form-control-lg {
 
 .mb-4 {
   margin-bottom: 1.5rem !important;
-  font-family: 'Times New Roman', Times, serif;
+
   font-size: xx-large;
 }
 
 
 .mb-5 {
   margin-bottom: 3rem !important;
-  font-family: 'Times New Roman', Times, serif;
+
 
 }
 
