--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.css
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.css
@@ -21,8 +21,8 @@
 .navbar-content{
     max-width: 1280px;
     color: #000000;
-    font-weight: 100;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    font-family: 'Rubik';
     margin: auto;
     
   }
@@ -49,7 +49,7 @@
 
 .nav-dropdown-item:hover{
     background-color: rgb(173, 173, 173);
-    color: black !important;
+    color: rgb(100, 100, 100) !important;
 }
 
 .nav-dropdown-menu-user{
