--- a/src/app/module/product/component/detalle/detalle.component.html
+++ b/src/app/module/product/component/detalle/detalle.component.html
@@ -1,109 +1,253 @@
-
 <div class="container">
-  <button class="btn btn-back" (click)="goBack()">
-      <i class="ph ph-arrow-left"></i>
-      <span> Volver</span>
-  </button>
-
-  <section class="card product-detail-container">
-      <div class="row">
-          <!-- Imagen del producto -->
-          <div class="col-md-6">
-              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                  @if(productImages.length > 1){
-                  <div class="carousel-indicators">
-                      <button *ngFor="let image of productImages; let i = index" type="button" [attr.data-bs-target]="'#carouselExampleIndicators'" [attr.data-bs-slide-to]="i" [ngClass]="{'active': i === 0}" [attr.aria-label]="'Slide {{ i + 1 }}'"></button>
-                  </div>
-                  }
-                  <div class="carousel-inner">
-                      <div *ngFor="let image of productImages; let i = index" class="carousel-item" [class.active]="i === 0">
-                          <img class="d-block w-100 product-image" [src]="image.image" alt="{{image.image}}">
-                          @if(isAdmin){
-                          <div class="text-center">
-                              <button class="btn admin-button mt-3" (click)="deleteImage(image.product_image_id)"><i class="ph ph-trash"></i> Borrar imagen</button>
-                          </div>
-                          }
-                      </div>
-                  </div>
-                  @if(productImages.length > 1){
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+    <button class="btn btn-back" (click)="goBack()">
+        <i class="ph ph-arrow-left"></i>
+        <span> Volver</span>
+    </button>
+  
+    <!-- Vista especial para el producto con GTIN 7506584236956 -->
+    <div *ngIf="isSpecialProduct()">
+      <img src="assets/images/MD1.png" class="d-block w-100 custom-carousel-image" alt="...">
+      <div class="text-center text-wrap">
+        <h2>MISS DIOR <br> LA MEJOR FRAGANCIA</h2>
+        <p>“Miss Dior nació de esas noches en Provenza iluminadas por luciérnagas, donde el jazmín verde sirve como contrapunto a la melodía de la noche y la tierra.”
+            - Christian Dior, 1947</p>
+      </div>
+      <!-- Detalles del producto especial -->
+      <div class="special-product-details row text-center">
+        <div class="col-md-6">
+          <img [src]="productImages[0]?.image" alt="Imagen del Producto Especial" class="special-product-image">
+          <h2>{{ product.product }}</h2>
+          <h3>${{ product.price }}</h3>
+          <p [ngClass]="{'stock-available': product.stock > 0, 'stock-out': product.stock < 1}">
+               {{ product.stock > 0 ? 'Disponible' : 'Agotado' }}
+          </p>
+          <div class="mb-3">
+            <p class="paragraph">{{ mostrarDescripcionCompleta ? product.description : (product.description | slice:0:limiteCaracteres) }}{{ !mostrarDescripcionCompleta && product.description.length > limiteCaracteres ? '...' : '' }}</p>
+            <span class="button-show-more" *ngIf="product.description.length > limiteCaracteres" (click)="mostrarDescripcionCompleta = !mostrarDescripcionCompleta">
+                {{ mostrarDescripcionCompleta ? 'Mostrar menos' : 'Mostrar más' }}
+            </span>
+        </div>
+          
+          <div class="quantity-selector-container card mt-2 ">
+              <div class="quantity-selector d-inline-block">
+                  <button class="btn btn-small" (click)="quantityDown()"><i class="ph ph-minus"></i></button>
+                  <input class="quantity-input" type="text" min="0" value="{{productQuantity}}" disabled>
+                  <button class="btn btn-small" (click)="quantityUp()"><i class="ph ph-plus"></i></button>
+                  <button class="btn shopping-cart-button" (click)="addToCart()">
+                      <i class="ph ph-shopping-bag icon-text-ul"></i>
+                      <span>Añadir al carrito</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                  </button>
-                  }
               </div>
-          </div>
-
-          <!-- Información del producto -->
-          <div class="col-md-6">
-              <div class="product-info-container">
-                  <div class="title">
-                      <h1 class="title">{{product.product}}</h1>
-                  </div>
-                  <div class="mb-3">
-                      @if(isAdmin){
-                      <label class="details-label" for="description">Product description</label>
-                      }
-                      <div class="mb-3">
-                          <p class="paragraph">{{ mostrarDescripcionCompleta ? product.description : (product.description | slice:0:limiteCaracteres) }}{{ !mostrarDescripcionCompleta && product.description.length > limiteCaracteres ? '...' : '' }}</p>
-                          <span class="button-show-more" *ngIf="product.description.length > limiteCaracteres" (click)="mostrarDescripcionCompleta = !mostrarDescripcionCompleta">
-                              {{ mostrarDescripcionCompleta ? 'Show less' : 'Show more' }}
-                          </span>
-                      </div>
-                  </div>
-                  <div class="mb-3">
-                      @if(isAdmin){
-                      <label class="details-label" for="price">Price</label>
-                      }
-                      <p class="product-price">$ {{product.price}}</p>
-                  </div>
-                  @if(isAdmin){
-                  <div class="mb-3">
-                      <label class="details-label" for="gtin">GTIN </label>
-                      <p class="paragraph">{{product.gtin}}</p>
-                  </div>
-                  }
-                  <div class="mb-3">
-                    <label class="details-label" for="stock"> </label>
-                    <p class="paragraph" [ngClass]="{'stock-available': product.stock > 0, 'stock-out': product.stock < 1}">
-                        {{ product.stock > 0 ? 'Disponible' : 'Agotado' }}
-                    </p>
+              @if(isAdmin){
+                <div class="admin-buttons-container text-center mt-3">
+                  <button class="btn admin-button" (click)="updateProduct(product.gtin)">
+                      <i class="ph ph-note-pencil icon-text-ul"></i> Editar
+                  </button>
+                  <button class="btn admin-button" (click)="showImagesModal(this.product.product_id, this.product.product)">
+                      <i class="ph ph-plus"></i> Añadir imagen
+                  </button>
                 </div>
-                
+              }
+          </div>
+        </div>
+        <div class="col-md-6">
 
-                  @if(!isAdmin){
-                  <div class="btn-cont mt-5">
-                    <div class="quantity-selector-container card mt-2 text-center">
-                      <div class="quantity-selector d-inline-block">
-                          <button class="btn btn-small" (click)="quantityDown()"><i class="ph ph-minus"></i></button>
-                          <input class="quantity-input" type="text" min="0" value="{{productQuantity}}" disabled>
-                          <button class="btn btn-small" (click)="quantityUp()"><i class="ph ph-plus"></i></button>
-                      </div>
-                  </div>
 
-                      <div class="shopping-cart-button-container mt-2">
-                          <button class="btn shopping-cart-button" (click)="addToCart()">
-                              <i class="ph ph-shopping-bag icon-text-ul"></i>
-                              <span>Añadir</span>
+            <img src="assets/images/MD3.jpg" class="d-block w-100 custom-carousel-image" alt="...">
+          </div>
+        </div>
+
+      <img src="assets/images/MD2.webp" class="d-block w-100 custom-carousel-image" alt="...">
+  
+      
+    </div>
+      
+  
+    <!-- Vista regular para otros productos -->
+    <div *ngIf="!isSpecialProduct()">
+      <section class="card product-detail-container">
+        <div class="row">
+            <!-- Imagen del producto -->
+            <div class="col-md-6">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div *ngIf="productImages.length > 1" class="carousel-indicators">
+                        <button *ngFor="let image of productImages; let i = index" type="button" [attr.data-bs-target]="'#carouselExampleIndicators'" [attr.data-bs-slide-to]="i" [ngClass]="{'active': i === 0}" [attr.aria-label]="'Slide {{ i + 1 }}'"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div *ngFor="let image of productImages; let i = index" class="carousel-item" [class.active]="i === 0">
+                            <img class="d-block w-100 product-image" [src]="image.image" alt="{{image.image}}">
+                        </div>
+                    </div>
+                    <div *ngIf="productImages.length > 1">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Información del producto -->
+            <div class="col-md-6">
+                <div class="product-info-container">
+                    <div class="title">
+                        <h1 class="title">{{product.product}}</h1>
+                        <h3>$ {{product.price}}</h3>
+                    </div>
+                    
+                    <!-- Disponibilidad -->
+                    <div class="mb-3">
+                        <label class="details-label" for="stock"> </label>
+                        <p class="paragraph" [ngClass]="{'stock-available': product.stock > 0, 'stock-out': product.stock < 1}">
+                            {{ product.stock > 0 ? 'Disponible' : 'Agotado' }}
+                        </p>
+                    </div>
+                    <div class="mb-3">
+                        <label class="details-label" for="description">Descripción del producto</label>
+                        <div class="mb-3">
+                            <p class="paragraph">{{ mostrarDescripcionCompleta ? product.description : (product.description | slice:0:limiteCaracteres) }}{{ !mostrarDescripcionCompleta && product.description.length > limiteCaracteres ? '...' : '' }}</p>
+                            <span class="button-show-more" *ngIf="product.description.length > limiteCaracteres" (click)="mostrarDescripcionCompleta = !mostrarDescripcionCompleta">
+                                {{ mostrarDescripcionCompleta ? 'Mostrar menos' : 'Mostrar más' }}
+                            </span>
+                        </div>
+                    </div>
+                    
+  
+                    @if(isAdmin){
+                      <div class="admin-buttons-container">
+                          <button class="btn admin-button" (click)="updateProduct(product.gtin)">
+                              <i class="ph ph-note-pencil icon-text-ul"></i> Editar
+                          </button>
+                          <button class="btn admin-button" (click)="showImagesModal(this.product.product_id, this.product.product)">
+                              <i class="ph ph-plus"></i> Añadir imagen
                           </button>
                       </div>
-                  </div>
-                  }@else {
-                  <div class="admin-buttons-container">
-                      <button class="btn admin-button" (click)="editarProducto()">
-                          <i class="ph ph-note-pencil icon-text-ul"></i> Edit
-                      </button>
-                      <button class="btn admin-button" (click)="showImageModal()">
-                          <i class="ph ph-plus"></i> Add image
-                      </button>
-                  </div>
-                  }
-              </div>
+                    }@else {
+                      <div class="btn-cont mt-5">
+                          <div class="quantity-selector-container card mt-2 text-center">
+                            <div class="quantity-selector d-inline-block">
+                                <button class="btn btn-small" (click)="quantityDown()"><i class="ph ph-minus"></i></button>
+                                <input class="quantity-input" type="text" min="0" value="{{productQuantity}}" disabled>
+                                <button class="btn btn-small" (click)="quantityUp()"><i class="ph ph-plus"></i></button>
+                            </div>
+                        </div>
+                        <div class="shopping-cart-button-container mt-2">
+                            <button class="btn shopping-cart-button" (click)="addToCart()">
+                                <i class="ph ph-shopping-bag icon-text-ul"></i>
+                                <span>Añadir</span>
+                            </button>
+                        </div>
+                      </div>
+                    }
+                </div>
+            </div>
+        </div>
+      </section>
+    </div>
+  
+    <!-- Modal Formulario de Producto -->
+    <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="modalForm">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Detalles del Producto</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
+          <div class="modal-body">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">
+              <div class="mb-3">
+                <label for="gtin" class="form-label">GTIN <span class="text-danger">*</span></label>
+                <input type="text" class="form-control" formControlName="gtin" id="gtin" placeholder="Código GTIN del producto...">
+                <div *ngIf="form.controls['gtin'].errors && submitted" class="invalid-feedback">
+                  Favor de ingresar un código GTIN válido
+                </div>
+              </div>
+    
+              <div class="mb-3">
+                <label for="product" class="form-label">Producto <span class="text-danger">*</span></label>
+                <input type="text" class="form-control" formControlName="product" id="product" placeholder="Nombre del producto...">
+                <div *ngIf="form.controls['product'].errors && submitted" class="invalid-feedback">
+                  Favor de ingresar un nombre de producto válido
+                </div>
+              </div>
+    
+              <div class="mb-3">
+                <label for="price" class="form-label">Precio <span class="text-danger">*</span></label>
+                <input type="text" class="form-control" formControlName="price" id="price" placeholder="Precio del producto...">
+                <div *ngIf="form.controls['price'].errors && submitted" class="invalid-feedback">
+                  Favor de ingresar un precio válido
+                </div>
+              </div>
+    
+              <div class="mb-3">
+                <label for="stock" class="form-label">Cantidad de productos <span class="text-danger">*</span></label>
+                <input type="text" class="form-control" formControlName="stock" id="stock" placeholder="Número de stock del producto...">
+                <div *ngIf="form.controls['stock'].errors && submitted" class="invalid-feedback">
+                  Favor de ingresar un número de stock válido
+                </div>
+              </div>
+    
+              <select class="form-select" *ngIf="categories && categories.length > 0" formControlName="category_id" id="category_id">
+                <option value="" hidden>Selecciona una categoría...</option>
+                <ng-container *ngFor="let category of categories">
+                  <option [value]="category.category_id">{{ category.category }}</option>
+                </ng-container>
+              </select>
+              <div *ngIf="!categories || categories.length === 0">Cargando categorías...</div>
+              
+    
+              <div class="mb-3">
+                <label for="description" class="form-label">Descripción <span class="text-danger">*</span></label>
+                <textarea rows="3" class="form-control" formControlName="description" id="description" placeholder="Descripción del producto..."></textarea>
+                <div *ngIf="form.controls['description'].errors && submitted" class="invalid-feedback">
+                  Favor de ingresar una descripción válida
+                </div>
+              </div>
+    
+              <div class="text-end">
+                <button type="submit" class="btn btn-primary">Guardar</button>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
-  </section>
-</div>
+    </div>
+  
+    <!-- Modal imágenes -->
+    <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="imagesModal">
+      <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">{{ productNameImages }}</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="upload-area text-center mb-4">
+              <label for="uploadImage" class="btn btn-primary">
+                <i class="ph ph-plus-circle"></i> Agregar imagen
+                <input type="file" (change)="fileChangeHandler($event)" id="uploadImage" hidden>
+              </label>
+            </div>
+            
+            <div class="row g-3">
+              <div *ngFor="let image of productImages; let i = index" class="col-md-3">
+                <div class="card">
+                  <img src="{{ image.image }}" class="card-img-top" alt="Image Description">
+                  <div class="card-body text-center">
+                    <button type="button" class="btn btn-danger" (click)="deleteProductImage(image)">
+                      <i class="ph ph-trash"></i> Eliminar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
